--- a/latex/first_approaches_and_problems.tex
+++ b/latex/first_approaches_and_problems.tex
@@ -36,6 +36,7 @@ Grundelemente aus denen ein Skelett besteht: Knochen, Gelenke + jeweils (relativ
   \item Aufbau als Grammatik (am Ende aber für jedes Nichtterminal genau eine Regel)
   \item Aufbau der (Nicht)terminale als Baum, nur Terminale können Kinder haben, Reihenfolge der Anwendung der Regeln sollte beliebig sein
   \item Symmetrie der Skelette (spiegle Elemente zum Schluss)
+  \item Repräsentation des Zustands als Hierarchie von einzelnen Komponenten (terminale sowie nichtterminale)
  \end{itemize}
  
  \begin{itemize}
