Restructure previous work and biology

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -54,4 +54,4 @@ JavaView zum anzeigen für groben Überblick (Lizenz checken)
 %   
 %   \item Java Swing Bibliothek und JOGL (Java OpenGL Binding) (\url{http://www.jogl.info})
 %  \end{itemize}
-\end{itemize}
+%\end{itemize}
