--- a/latex/generation_of_non_pca_things.tex
+++ b/latex/generation_of_non_pca_things.tex
@@ -33,6 +33,7 @@ In jedem Schritt werden die Winkel um eine bestimmte Gradzahl verändert. Diese 
 \todo{Wenn Änderung zu klein, wird Knochen wahrscheinlich meistens wieder zurückgesetzt, deshalb stärkere Verkleinerung des Winkels}
 Zusätzlich wird nicht in jedem Schritt jeder Freiheitsgrad jedes Gelenks verändert. Für jeden Freiheitsgrad wird eine Wahrscheinlichkeit (kleiner als eins) festgelegt, dass dieser ausgewählt wird. Dadurch können bestimmte Richtungen oder Gelenke priorisiert werden um ein besseres Ergebnis zu erzielen. \todo{Was sind die guten Einstellungen? bzw braucht man dise Wkten überhaupt?}
 \todo{Konkrete Einstellungen erwähnen (in Implementierungsdetails?)}
+\todo{Zweiter Freiheitsgrad des Schulter-/Hüftgelenks nicht verwendet; breitbeinige Reptilien erwähnen (siehe auch "`Vergleichende Anatmie)}
 
 Evaluierung \todo{ausformulieren}
 \begin{itemize}
