--- a/latex/previous_work.tex
+++ b/latex/previous_work.tex
@@ -2,30 +2,30 @@
 %---------------------------
 \chapter{Bisherige Arbeiten}
 
-\begin{itemize}
- \item Aufbau des Skeletts mit Aufbau von Skeletten, die für Animation verwendet werden, vergleichen (realistischer, ...)
-\end{itemize}
 
+%--------------------
+\section{3D-Editoren}
 
+Aufbau der erzeugten / zu erzeugenden Skelette mit Aufbau von Skeletten, die für Animation verwendet werden, vergleichen (realistischer,\dots)
 
-%-------------
-\section{Ziva}
+%- - - - - - -
+\subsection{Ziva}
 
 \begin{itemize}
  \item Ziva VFX Maya Plugin zur Erstellung von Charakteren und Simulation von biomechanischen Bewegungen \url{https://zivadynamics.com/}
  \item Charaktererstellung in Ziva beginnt mit der Modellierung des Skeletts. Knochen mit Animationen werden als Alembic-Datei gespeichert und dann in "`Ziva-Knochen"' konvertiert. \url{https://discover.therookies.co/2019/06/01/vfx-in-9-steps/}
 \end{itemize}
 
-%---------------------------
-\section{ZSpheres in Zbrush}
+%- - - - - - - - - - - - - -
+\subsection{ZSpheres in Zbrush}
 
 \begin{itemize}
  \item \url{http://docs.pixologic.com/user-guide/3d-modeling/modeling-basics/creating-meshes/zspheres/},\\ Beispielvideo: \url{https://www.youtube.com/watch?v=Wl0XK6ggUOA}
  \item Möglichkeit ein "`Skelett"' aus Kugeln zu erstellen. Definiert aber eher die grobe Außenhaut mit Zusatzinformationen dazu wo die Gelenke sind.
 \end{itemize}
 
-%----------------------
-\section{3DS MAX Biped}
+%- - - - - - - - - - - 
+\subsection{3DS MAX Biped}
 
 \begin{itemize}
  \item \url{https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2019/ENU/3DSMax-Character-Animation/files/GUID-2F6BC5D1-DD45-4C2E-AC3A-D8C6E0F5DEB1-htm.html}
@@ -33,6 +33,7 @@
  \item Skelette sind schon vorgefertigt.
  \item v.a. für menschliche Skelette, aber auch (limitiert) anpassbar auf Tiere
 \end{itemize}
+
 
 %---------------------------------
 \section{Forensik und Archäologie}
@@ -42,9 +43,11 @@
  \item Rekonstruktion von Tieren in der Archäologie anhand des Skeletts v.a. durch Künstler (?)
 \end{itemize}
 
+%--------------------------------
+\section{Computerspile und Filme}
 
-%----------------------
-\section{No Man's Sky}
+%- - - - - - - - - - -
+\subsection{No Man's Sky}
 
 \begin{itemize}
  \item Webseite \cite{NoMansSky}
@@ -53,8 +56,8 @@
  \item Zunächst Generierung von äußerem 3D-Modell, dann Anpassung der Knochen.
 \end{itemize}
 
-%---------------------
-\section{Avatar movie}
+%- - - - - - - - - - -
+\subsection{Film "`Avatar"'}
 
 \begin{itemize}
  \item Direhorse (Schreckenspferd) hat sechs Beine (vier vorne, zwei hinten).\\
@@ -63,13 +66,3 @@
  Bild: \url{https://james-camerons-avatar.fandom.com/wiki/Gallery:_Pandoran_Creatures}
 \end{itemize}
 
-
-%-------------------
-\section{Mythologie}
-
-\begin{itemize}
- \item Zentauren haben Körper wie ein Pferd, aber statt einem Hals setzt ein menschlicher Oberkörper auf Schultergürtel auf.\\
- \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/OurCentaursAreDifferent?from=Main.CentauroidForm}
- \item Pegasus hat den Körper eines Pferdes + Flügel, die zusätzlich zu den Vorderbeinen an Schultergürtel ansetzen\\
- \url{https://tvtropes.org/pmwiki/pmwiki.php/Main/Pegasus}
-\end{itemize}
