Wrote introduction on vertebrae

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -41,6 +41,7 @@ Notizen aus "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Ve
  \item Amphibien: nicht vollkommen terrestrisch (Haut feucht, Eier im Wasser / feucht). Unterklasse Lissamphibia (dazu gehören alle rezenten Amphibien) haben nur vier Zehen am Vorderfuß. Es gibt drei Ordnungen: Anura (Schwanzlose), Urodela (Schwanzlurche) und Apoda (Beinlose) (S.\ 61)
  \item Reptilien: erste Klasse mit allen Strukturen für vollkommen landgebundenes Leben, leben aber auch teilweise wieder im Wasser (S.\ 62)
  \item Vögel: alle rezenten Vögel fliegen oder sind Nachkommen von Fliegern. Erste Zehe ist opponiert (siehe Diagramm S.\ 71). (S.\ 67)
+ \item Säugetiere (S.\ 71 f)
 \end{itemize}
 
 \textbf{Kapitel 8} - (Kopfskelett)
