--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -26,7 +26,7 @@
     issn = {1063-5157},
     doi = {10.1093/sysbio/syu127},
     url = {https://doi.org/10.1093/sysbio/syu127},
-    eprint = {http://oup.prod.sis.lan/sysbio/article-pdf/64/2/365/24587311/syu127.pdf}
+    eprint = {https://academic.oup.com/sysbio/article-pdf/64/2/365/24587311/syu127.pdf}
 }
 
 @book{Vergleichende_Anatomie,
