--- a/latex/first_approaches_and_problems.tex
+++ b/latex/first_approaches_and_problems.tex
@@ -6,6 +6,7 @@
 \section{Bestandteile eines Skeletts}
 
 Grundelemente aus denen ein Skelett besteht: Knochen, Gelenke + jeweils (relative) Positionen und Orientierungen (Knochen zunächst Rechtecke (siehe Knochenmodelle))
+\todo{erwähnen, dass keine aufrechteren Tiere als T-Rex oder Känguru generiert werden (keine Menschen)}
 
 \begin{itemize}
  \item Ein Skelett besteht aus Knochen, Gelenken und deren (relativen) Positionen und Orientierungen.
